fix error handler bug
