# server/app/api/v1/auth.py
@@ -1,7 +1,8 @@
 from fastapi import APIRouter, Depends, status
 from sqlalchemy.orm import Session
 from app.api.dependencies import get_db
-from app.schemas.auth import RegisterRequest, LoginRequest, Token
+from fastapi.security import OAuth2PasswordRequestForm
+from app.schemas.auth import RegisterRequest, Token
 from app.schemas.user import UserResponse
 from app.services import auth_service
 
@@ -13,6 +14,6 @@ def register(request: RegisterRequest, db: Session = Depends(get_db)):
     return auth_service.register_user_v1(db, request)
 
 @router.post("/login", response_model=Token)
-def login(request: LoginRequest, db: Session = Depends(get_db)):
-    """Đăng nhập hệ thống (nhận Token)"""
-    return auth_service.login_user_v1(db, request)
+def login(form_data: OAuth2PasswordRequestForm = Depends(), db: Session = Depends(get_db)):
+    """Đăng nhập hệ thống bằng Form Data"""
+    return auth_service.login_user_v1(db, form_data)
